package bank.models;

public enum OperationStatus {
    PENDING,
    COMPLETED,
    FAILED
}