package bank.models;

public enum OperationType {
    DEPOSIT,
    WITHDRAWAL,
    TRANSFER
}
